--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "ngx-cookie-service": "^14.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
